kubernetes/test/hello-world/base/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world
  namespace: hello-world
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/hello`)
      kind: Rule
      services:
        - name: hello-world
          port: 80
    - match: Host(`hello.test.local`)
      kind: Rule
      services:
        - name: hello-world
          port: 80
